--- a/newdjango_pro/app1/templates/login page.html
+++ b/newdjango_pro/app1/templates/login page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
     <form action="" method="POST">
         <table align="center" border="0" width='200px' cellspacing='20' cellpadding='10'>
             <tr>
-                <td class="head" align="center">LOGIN HERE</td>
+                <td class="head" align="center">USER LOGIN</td>
             </tr>
             <tr>
                 <td> <input type="text" placeholder="username" required></td>
@@ -28,6 +30,6 @@
 
         </table>
     </form>
-    
+    </div>
 </body>
 </html>
